--- a/rules.scss
+++ b/rules.scss
@@ -98,6 +98,8 @@ $dark: rgb(127, 57, 45);
 
 $darkest: rgb(64, 28, 22);
 
+$darkest_shadow: rgba(64, 28, 22, 0.5);
+
 $title1: 'Permanent Marker', cursive;
 
 $title2: 'Rock Salt', cursive;
