--- a/easyrecipes.scss
+++ b/easyrecipes.scss
@@ -77,6 +77,8 @@ a {
   width: 100%;
   height: 25vh;
   margin: 2vh 0 4vh 0;
+  @include user-select(none);
+  cursor: default;
 }
 
 #title h1 {
@@ -107,6 +109,8 @@ a {
   font-size: 4.5vh;
   position: relative;
   height: 13vh;
+  @include user-select(none);
+  cursor: pointer;
 }
 
 .selector {
@@ -158,6 +162,8 @@ a {
   text-align: center;
   font-family: $title2;
   margin-bottom: -2vh;
+  @include user-select(none);
+  cursor: default;
 }
 
 .section_header h3 {
@@ -212,6 +218,8 @@ input[type=button] {
   text-align: center;
   box-shadow: 0 .5vh 1vh $darkest_shadow;
   margin-top: 0;
+  @include user-select(none);
+  cursor: pointer;
 }
 
 input[type=button]:hover {
